--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -160,6 +160,12 @@ volume-memory-consumption-{memleak-jiva}:
   extends: .func_test_template
   script:
    - ./script/apps/memleak/tests/jiva/memory-consumption
+
+k8s-snapshot-clone-creation-{snapshot-clone-jiva}:
+  extends: .func_test_template
+  script:
+   - ./script/apps/percona/functional/jiva/k8s-snapshot-clone
+
 ## Define job template for chaos jobs 
 
 .chaos_test_template:
