--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -156,7 +156,7 @@ volume-data-integrity-{fio-jiva}:
   script:
    - ./script/apps/fio/tests/jiva/fio-volume-data-integrity-check
 
-volume-memory-consumption-{memleak-jiva}:
+volume-memory-consumption-{memcheck-jiva}:
   extends: .func_test_template
   script:
    - ./script/apps/memleak/tests/jiva/memory-consumption
