--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,9 @@ stages:
   - APP-CHAOS-TEST
   - CLUSTER-CLEANUP
 
+variables: 
+  utils_path: "/openebs/e2e-aws/script/utils"
+
 ## Setup the kubernetes cluster
 
 aws-cluster:
