--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,7 @@ stages:
   - CLUSTER-SETUP
   - PROVIDER-INFRA-SETUP
   - STATEFUL-APP-DEPLOY
-  - APP-FUNC-TEST
-  - APP-CHAOS-TEST
+  - NODE-DRAIN
   - CLUSTER-CLEANUP
 
 variables: 
@@ -50,164 +49,44 @@ openebs-aws-deploy:
 
 ## Define the app deployer jobs
 
-## PERCONA-JIVA
-percona-jiva-run/load/check 0:2:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/percona/deployer/percona-app-deploy-jiva
-
-percona-jiva-run/load/check 1:2:
-  extends: .app_deploy_template
-  before_script: 
-   - sleep 180
-  script: 
-   - ./script/apps/percona/workload/jiva/percona-app-workload-jiva
-
-## MONGO-JIVA
-mongo-jiva-run/load/check 0:2:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/mongo/deployer/mongo-app-deploy-jiva
-
-mongo-jiva-run/load/check 1:2:
-  extends: .app_deploy_template
-  before_script: 
-   - sleep 180
-  script: 
-   - ./script/apps/mongo/workload/jiva/mongo-app-workload-jiva
-
-# POSTGRES-JIVA
-postgres-jiva-run/load/check 0:2:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/postgres/deployer/postgres-app-deploy-jiva
-
-postgres-jiva-run/load/check 1:2:
-  extends: .app_deploy_template
-  before_script: 
-   - sleep 180
-  script: 
-   - ./script/apps/postgres/workload/jiva/postgres-app-workload-jiva
-
-# CASSANDRA-JIVA
-cassandra-jiva-run/load/check 0:2:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/cassandra/deployer/cassandra-app-deploy-jiva
-
-cassandra-jiva-run/load/check 1:2:
-  extends: .app_deploy_template
-  before_script: 
-   - sleep 180
-  script: 
-   - ./script/apps/cassandra/workload/jiva/cassandra-app-workload-jiva
-
-# JENKINS-JIVA
-jenkins-jiva-run/load/check:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/jenkins/deployer/jenkins-app-deploy-jiva
-
 # PERCONA-CSTOR
-percona-cstor-run/load/check 0:2:
+percona-cstor-run/load/check 0:3:
   extends: .app_deploy_template
   script: 
    - ./script/apps/percona/deployer/percona-app-deploy-cstor
 
-percona-cstor-run/load/check 1:2:
+percona-cstor-run/load/check 1:3:
   extends: .app_deploy_template
   before_script: 
-   - sleep 180
+   - ./script/utils/wait_on_job label='app:percona-deployment-cstor'
   script: 
    - ./script/apps/percona/workload/cstor/percona-app-workload-cstor
 
-# MONGO-CSTOR
-mongo-cstor-run/load/check 0:2:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/mongo/deployer/mongo-app-deploy-cstor
-
-mongo-cstor-run/load/check 1:2:
+percona-cstor-run/load/check 2:3:
   extends: .app_deploy_template
   before_script: 
-   - sleep 180
+   - ./script/utils/wait_on_job label='app:percona-deployment-cstor'
   script: 
-   - ./script/apps/mongo/workload/cstor/mongo-app-workload-cstor
-
-## Define job template for func test jobs  
-
-.func_test_template:
-  image: atulabhi/kops:v8
-  stage: APP-FUNC-TEST
-  when: always 
-  artifacts:
-    paths: 
-      - aws-openebs/
-
-app-replica-scale-{cassandra-jiva}:
-  extends: .func_test_template #dependencies: cassandra-jiva
-  script:
-   - ./script/apps/cassandra/functional/jiva/app-sts-replica-scale 
-
-app-upgrade-deployment-{jenkins-jiva}:
-  extends: .func_test_template #dependencies: jenkins-jiva
-  script:
-   - ./script/apps/jenkins/functional/jiva/app-upgrade-deployment
-
-volume-data-integrity-{fio-jiva}:
-  extends: .func_test_template #dependencies: jenkins-jiva
-  script:
-   - ./script/apps/fio/tests/jiva/fio-volume-data-integrity-check
-
-volume-memory-consumption-{memcheck-jiva}:
-  extends: .func_test_template
-  script:
-   - ./script/apps/memleak/tests/jiva/memory-consumption
-
-k8s-snapshot-clone-creation-{snapshot-clone-jiva}:
-  extends: .func_test_template
-  script:
-   - ./script/apps/percona/functional/jiva/k8s-snapshot-clone
+   - ./script/apps/percona/workload/cstor/percona-app-liveness-cstor
 
 ## Define job template for chaos jobs 
 
 .chaos_test_template:
   image: atulabhi/kops:v8
-  stage: APP-CHAOS-TEST
   when: always 
+  before_script: 
+   - ./script/utils/cluster_health_check component='test-infra'
+  after_script:
+   - ./script/utils/cluster_health_check component='test-infra'
   artifacts:
     paths: 
       - aws-openebs/
 
 repl-kill-{percona-jiva}:
-  extends: .chaos_test_template #dependencies: percona-jiva
-  script:
-   - ./script/apps/percona/chaos/jiva/volume-replica-failure
-
-ctrl-kill-{mongo-jiva}:
-  extends: .chaos_test_template #dependencies: mongo-jiva
-  script:
-   - ./script/apps/mongo/chaos/jiva/volume-controller-failure
-
-repl-disconnect-{jenkins-jiva}:
-  extends: .chaos_test_template #dependencies: jenkins-jiva
-  script:
-   - ./script/apps/jenkins/chaos/jiva/volume-replica-network-delay
-
-ctrl-disconnect-{postgres-jiva}:
-  extends: .chaos_test_template #dependencies: postgres-jiva
-  script:
-   - ./script/apps/postgres/chaos/jiva/volume-controller-network-delay
-
-tgt-kill-{percona-cstor}:
+  stage: NODE-DRAIN
   extends: .chaos_test_template #dependencies: percona-cstor
   script:
-   - ./script/apps/percona/chaos/cstor/volume-target-failure
-
-tgt-disconnect-{mongo-cstor}:
-  extends: .chaos_test_template #dependencies: mongo-cstor
-  script:
-   - ./script/apps/mongo/chaos/cstor/volume-target-network-delay
+   - ./script/chaos/node-maintenance-via-drain
 
 cleanup-aws:
   when: always
