--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,15 +57,11 @@ percona-cstor-run/load/check 0:3:
 
 percona-cstor-run/load/check 1:3:
   extends: .app_deploy_template
-  before_script: 
-   - ./script/utils/wait_on_job label='app:percona-deployment-cstor'
   script: 
    - ./script/apps/percona/workload/cstor/percona-app-workload-cstor
 
 percona-cstor-run/load/check 2:3:
   extends: .app_deploy_template
-  before_script: 
-   - ./script/utils/wait_on_job label='app:percona-deployment-cstor'
   script: 
    - ./script/apps/percona/workload/cstor/percona-app-liveness-cstor
 
@@ -74,15 +70,11 @@ percona-cstor-run/load/check 2:3:
 .chaos_test_template:
   image: atulabhi/kops:v8
   when: always 
-  before_script: 
-   - ./script/utils/cluster_health_check component='test-infra'
-  after_script:
-   - ./script/utils/cluster_health_check component='test-infra'
   artifacts:
     paths: 
       - aws-openebs/
 
-repl-kill-{percona-jiva}:
+node-maintenance-via-drain:
   stage: NODE-DRAIN
   extends: .chaos_test_template #dependencies: percona-cstor
   script:
