(fix)(ci): remove duplicate job name in the gitlab ci yaml
Signed-off-by: ksatchit <karthik.s@openebs.io>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ node-maintenance-via-drain:
   script:
    - ./script/chaos/node-maintenance-via-drain
 
-node-maintenance-via-drain:
+node-loss-via-evict:
   stage: NODE-LOSS-EVICT
   extends: .chaos_test_template #dependencies: percona-cstor
   script:
