--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ stages:
   - PROVIDER-INFRA-SETUP
   - STATEFUL-APP-DEPLOY
   - APP-FUNC-TEST
-  - APP-CHAOS-TEST
-  - APP-DEPROVISION
+  # - APP-CHAOS-TEST
+  # - APP-DEPROVISION
   - CLUSTER-CLEANUP
 
 variables: 
@@ -62,70 +62,70 @@ openebs-sc-deploy:
 
 ## Define the app deployer jobs
 
-## PERCONA-JIVA
-percona-jiva-run/load/check 0:2:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/percona/deployer/percona-app-deploy-jiva
+# ## PERCONA-JIVA
+# percona-jiva-run/load/check 0:2:
+#   extends: .app_deploy_template
+#   script: 
+#    - ./script/apps/percona/deployer/percona-app-deploy-jiva
 
-percona-jiva-run/load/check 1:2:
-  extends: .app_deploy_template
-  before_script: 
-   - sleep 180
-  script: 
-   - ./script/apps/percona/workload/jiva/percona-app-workload-jiva
+# percona-jiva-run/load/check 1:2:
+#   extends: .app_deploy_template
+#   before_script: 
+#    - sleep 180
+#   script: 
+#    - ./script/apps/percona/workload/jiva/percona-app-workload-jiva
 
 
 # PROMETHEUS-CSTOR
-prometheus-cstor-run/load/check:
-  extends: .app_deploy_template
-  script:
-   - ./script/apps/prometheus/deployer/prometheus-app-deploy-cstor
+# prometheus-cstor-run/load/check:
+#   extends: .app_deploy_template
+#   script:
+#    - ./script/apps/prometheus/deployer/prometheus-app-deploy-cstor
 
 ## PERCONA-JIVA-SINGLE-REPLICA
-percona-jiva-single-replica-run/load/check:
-  extends: .app_deploy_template
-  script:
-   - ./script/apps/percona/deployer/percona-deploy-jiva-single-replica
+# percona-jiva-single-replica-run/load/check:
+#   extends: .app_deploy_template
+#   script:
+#    - ./script/apps/percona/deployer/percona-deploy-jiva-single-replica
 
 
 ## MONGO-JIVA
-mongo-jiva-run/load/check 0:2:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/mongo/deployer/mongo-app-deploy-jiva
+# mongo-jiva-run/load/check 0:2:
+#   extends: .app_deploy_template
+#   script: 
+#    - ./script/apps/mongo/deployer/mongo-app-deploy-jiva
 
-mongo-jiva-run/load/check 1:2:
-  extends: .app_deploy_template
-  before_script: 
-   - sleep 180
-  script: 
-   - ./script/apps/mongo/workload/jiva/mongo-app-workload-jiva
+# mongo-jiva-run/load/check 1:2:
+#   extends: .app_deploy_template
+#   before_script: 
+#    - sleep 180
+#   script: 
+#    - ./script/apps/mongo/workload/jiva/mongo-app-workload-jiva
 
 # POSTGRES-JIVA
-postgres-jiva-run/load/check 0:2:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/postgres/deployer/postgres-app-deploy-jiva
+# postgres-jiva-run/load/check 0:2:
+#   extends: .app_deploy_template
+#   script: 
+#    - ./script/apps/postgres/deployer/postgres-app-deploy-jiva
 
-postgres-jiva-run/load/check 1:2:
-  extends: .app_deploy_template
-  before_script: 
-   - sleep 180
-  script: 
-   - ./script/apps/postgres/workload/jiva/postgres-app-workload-jiva
+# postgres-jiva-run/load/check 1:2:
+#   extends: .app_deploy_template
+#   before_script: 
+#    - sleep 180
+#   script: 
+#    - ./script/apps/postgres/workload/jiva/postgres-app-workload-jiva
 
-# CASSANDRA-JIVA
-cassandra-jiva-run/load/check 0:2:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/cassandra/deployer/cassandra-app-deploy-jiva
+# # CASSANDRA-JIVA
+# cassandra-jiva-run/load/check 0:2:
+#   extends: .app_deploy_template
+#   script: 
+#    - ./script/apps/cassandra/deployer/cassandra-app-deploy-jiva
 
 # JENKINS-JIVA
-jenkins-jiva-run/load/check:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/jenkins/deployer/jenkins-app-deploy-jiva
+# jenkins-jiva-run/load/check:
+#   extends: .app_deploy_template
+#   script: 
+#    - ./script/apps/jenkins/deployer/jenkins-app-deploy-jiva
 
 # PERCONA-CSTOR
 percona-cstor-run/load/check 0:2:
@@ -133,37 +133,37 @@ percona-cstor-run/load/check 0:2:
   script: 
    - ./script/apps/percona/deployer/percona-app-deploy-cstor
 
-percona-cstor-run/load/check 1:2:
-  extends: .app_deploy_template
-  before_script: 
-   - sleep 180
-  script: 
-   - ./script/apps/percona/workload/cstor/percona-app-workload-cstor
+# percona-cstor-run/load/check 1:2:
+#   extends: .app_deploy_template
+#   before_script: 
+#    - sleep 180
+#   script: 
+#    - ./script/apps/percona/workload/cstor/percona-app-workload-cstor
 
 # MONGO-CSTOR
-mongo-cstor-run/load/check 0:2:
-  extends: .app_deploy_template
-  script: 
-   - ./script/apps/mongo/deployer/mongo-app-deploy-cstor
+# mongo-cstor-run/load/check 0:2:
+#   extends: .app_deploy_template
+#   script: 
+#    - ./script/apps/mongo/deployer/mongo-app-deploy-cstor
 
-mongo-cstor-run/load/check 1:2:
-  extends: .app_deploy_template
-  before_script: 
-   - sleep 180
-  script: 
-   - ./script/apps/mongo/workload/cstor/mongo-app-workload-cstor
+# mongo-cstor-run/load/check 1:2:
+#   extends: .app_deploy_template
+#   before_script: 
+#    - sleep 180
+#   script: 
+#    - ./script/apps/mongo/workload/cstor/mongo-app-workload-cstor
 
 # CASSANDRA_CSTOR
-cassandra-cstor-run/load/check 0:2:
-  extends: .app_deploy_template
-  script:
-   - ./script/apps/cassandra/deployer/cassandra-app-deploy-cstor
+# cassandra-cstor-run/load/check 0:2:
+#   extends: .app_deploy_template
+#   script:
+#    - ./script/apps/cassandra/deployer/cassandra-app-deploy-cstor
 
 # JENKINS_CSTOR
-jenkins-cstor-run/load/check:
-  extends: .app_deploy_template
-  script:
-   - ./script/apps/jenkins/deployer/jenkins-app-deploy-cstor  
+# jenkins-cstor-run/load/check:
+#   extends: .app_deploy_template
+#   script:
+#    - ./script/apps/jenkins/deployer/jenkins-app-deploy-cstor  
 
 ## Define job template for func test jobs  
 
@@ -175,113 +175,124 @@ jenkins-cstor-run/load/check:
     paths: 
       - aws-openebs/
 
-app-replica-scale-{cassandra-jiva}:
-  extends: .func_test_template #dependencies: cassandra-jiva
-  script:
-   - ./script/apps/cassandra/functional/jiva/app-sts-replica-scale 
+# app-replica-scale-{cassandra-jiva}:
+#   extends: .func_test_template #dependencies: cassandra-jiva
+#   script:
+#    - ./script/apps/cassandra/functional/jiva/app-sts-replica-scale 
 
-app-upgrade-deployment-{jenkins-jiva}:
-  extends: .func_test_template #dependencies: jenkins-jiva
-  script:
-   - ./script/apps/jenkins/functional/jiva/app-upgrade-deployment
+# app-upgrade-deployment-{jenkins-jiva}:
+#   extends: .func_test_template #dependencies: jenkins-jiva
+#   script:
+#    - ./script/apps/jenkins/functional/jiva/app-upgrade-deployment
 
-k8s-snapshot-clone-creation-{snapshot-clone-jiva}:
-  extends: .func_test_template
-  script:
-   - ./script/apps/percona/functional/jiva/k8s-snapshot-clone
+# k8s-snapshot-clone-creation-{snapshot-clone-jiva}:
+#   extends: .func_test_template
+#   script:
+#    - ./script/apps/percona/functional/jiva/k8s-snapshot-clone
 
 # K8s-snapshot/clone test on cStor volume
 
-cstor-k8s-snapshot-clone-creation-{snapshot-clone-cStor}:
+# cstor-k8s-snapshot-clone-creation-{snapshot-clone-cStor}:
+#   extends: .func_test_template
+#   script:
+#    - ./script/apps/percona/functional/cstor/k8s-snapshot-clone-cstor
+
+# volume-data-integrity-{fio-jiva}:
+#   extends: .func_test_template 
+#   script:
+#    - ./script/apps/fio/tests/jiva/fio-volume-data-integrity-check
+
+# volume-data-integrity-{fio-cstor}:
+#   extends: .func_test_template
+#   script:
+#    - ./script/apps/fio/tests/cstor/fio-volume-data-integrity-check
+
+# volume-memory-consumption-{memcheck-jiva}:
+#   extends: .func_test_template
+#   script:
+#    - ./script/apps/memleak/tests/jiva/memory-consumption
+
+# volume-memory-consumption-{memcheck-cstor}:
+#   extends: .func_test_template
+#   script:
+#    - ./script/apps/prometheus/functional/cstor/memcheck/memory-consumption
+
+# app-replica-scale-{cassandra-cstor}:
+#   extends: .func_test_template #dependencies: cassandra-cstor
+#   script:
+#    - ./script/apps/cassandra/functional/cstor/app-sts-replica-scale
+
+# app-upgrade-deployment-{jenkins-cstor}:
+#   extends: .func_test_template #dependencies: jenkins-cstor
+#   script:
+#    - ./script/apps/jenkins/functional/cstor/app-upgrade-deployment
+
+Snapshot-rebuild-single-replica-{percona-cstor}:
   extends: .func_test_template
   script:
-   - ./script/apps/percona/functional/cstor/k8s-snapshot-clone-cstor
-
-volume-data-integrity-{fio-jiva}:
-  extends: .func_test_template 
-  script:
-   - ./script/apps/fio/tests/jiva/fio-volume-data-integrity-check
-
-volume-data-integrity-{fio-cstor}:
+   - ./script/apps/percona/functional/cstor/snapshot-rebuild-single-rep
+   
+Snapshot-rebuild-multiple-replica-{percona-cstor}:
   extends: .func_test_template
   script:
-   - ./script/apps/fio/tests/cstor/fio-volume-data-integrity-check
+   - ./script/apps/percona/functional/cstor/snapshot-rebuild-multiple-rep  
 
-volume-memory-consumption-{memcheck-jiva}:
-  extends: .func_test_template
-  script:
-   - ./script/apps/memleak/tests/jiva/memory-consumption
-
-volume-memory-consumption-{memcheck-cstor}:
-  extends: .func_test_template
-  script:
-   - ./script/apps/prometheus/functional/cstor/memcheck/memory-consumption
-
-app-replica-scale-{cassandra-cstor}:
-  extends: .func_test_template #dependencies: cassandra-cstor
-  script:
-   - ./script/apps/cassandra/functional/cstor/app-sts-replica-scale
-
-app-upgrade-deployment-{jenkins-cstor}:
-  extends: .func_test_template #dependencies: jenkins-cstor
-  script:
-   - ./script/apps/jenkins/functional/cstor/app-upgrade-deployment
 
 ## Define job template for chaos jobs 
 
-.chaos_test_template:
-  image: atulabhi/kops:v8
-  stage: APP-CHAOS-TEST
-  when: always 
-  artifacts:
-    paths: 
-      - aws-openebs/
+# .chaos_test_template:
+#   image: atulabhi/kops:v8
+#   stage: APP-CHAOS-TEST
+#   when: always 
+#   artifacts:
+#     paths: 
+#       - aws-openebs/
 
-app-kill-{mongo-jiva-xfs}:
-  extends: .chaos_test_template #dependencies: mongo-jiva
-  script:
-   - ./script/apps/mongo/chaos/jiva/application-pod-failure
+# app-kill-{mongo-jiva-xfs}:
+#   extends: .chaos_test_template #dependencies: mongo-jiva
+#   script:
+#    - ./script/apps/mongo/chaos/jiva/application-pod-failure
 
-app-kill-{jenkins-cstor}:
-  extends: .chaos_test_template #dependencies: jenkins-cstor
-  script:
-   - ./script/apps/jenkins/chaos/cstor/application-pod-failure
+# app-kill-{jenkins-cstor}:
+#   extends: .chaos_test_template #dependencies: jenkins-cstor
+#   script:
+#    - ./script/apps/jenkins/chaos/cstor/application-pod-failure
 
-repl-kill-{percona-jiva}:
-  extends: .chaos_test_template #dependencies: percona-jiva
-  script:
-   - ./script/apps/percona/chaos/jiva/volume-replica-failure
+# repl-kill-{percona-jiva}:
+#   extends: .chaos_test_template #dependencies: percona-jiva
+#   script:
+#    - ./script/apps/percona/chaos/jiva/volume-replica-failure
 
-## Single replica failure
-single-repl-kill-{percona-jiva}:
-  extends: .chaos_test_template #dependencies: percona-jiva-single-replica
-  script:
-   - ./script/apps/percona/chaos/jiva/single-replica-failure
+# ## Single replica failure
+# single-repl-kill-{percona-jiva}:
+#   extends: .chaos_test_template #dependencies: percona-jiva-single-replica
+#   script:
+#    - ./script/apps/percona/chaos/jiva/single-replica-failure
 
-ctrl-kill-{mongo-jiva}:
-  extends: .chaos_test_template #dependencies: mongo-jiva
-  script:
-   - ./script/apps/mongo/chaos/jiva/volume-controller-failure
+# ctrl-kill-{mongo-jiva}:
+#   extends: .chaos_test_template #dependencies: mongo-jiva
+#   script:
+#    - ./script/apps/mongo/chaos/jiva/volume-controller-failure
 
-repl-disconnect-{jenkins-jiva}:
-  extends: .chaos_test_template #dependencies: jenkins-jiva
-  script:
-   - ./script/apps/jenkins/chaos/jiva/volume-replica-network-delay
+# repl-disconnect-{jenkins-jiva}:
+#   extends: .chaos_test_template #dependencies: jenkins-jiva
+#   script:
+#    - ./script/apps/jenkins/chaos/jiva/volume-replica-network-delay
 
-ctrl-disconnect-{postgres-jiva}:
-  extends: .chaos_test_template #dependencies: postgres-jiva
-  script:
-   - ./script/apps/postgres/chaos/jiva/volume-controller-network-delay
+# ctrl-disconnect-{postgres-jiva}:
+#   extends: .chaos_test_template #dependencies: postgres-jiva
+#   script:
+#    - ./script/apps/postgres/chaos/jiva/volume-controller-network-delay
 
-tgt-kill-{percona-cstor}:
-  extends: .chaos_test_template #dependencies: percona-cstor
-  script:
-   - ./script/apps/percona/chaos/cstor/volume-target-failure
+# tgt-kill-{percona-cstor}:
+#   extends: .chaos_test_template #dependencies: percona-cstor
+#   script:
+#    - ./script/apps/percona/chaos/cstor/volume-target-failure
 
-tgt-disconnect-{mongo-cstor}:
-  extends: .chaos_test_template #dependencies: mongo-cstor
-  script:
-   - ./script/apps/mongo/chaos/cstor/volume-target-network-delay
+# tgt-disconnect-{mongo-cstor}:
+#   extends: .chaos_test_template #dependencies: mongo-cstor
+#   script:
+#    - ./script/apps/mongo/chaos/cstor/volume-target-network-delay
 
 ## Define a job template for app deprovision
 
@@ -294,40 +305,40 @@ tgt-disconnect-{mongo-cstor}:
       - aws-openebs/
 
 ## PERCONA-JIVA
-percona-jiva-deprovision:
-  extends: .app_deprovision_template
-  script:
-   - ./script/apps/percona/deprovision/percona-app-deprovision-jiva
+# percona-jiva-deprovision:
+#   extends: .app_deprovision_template
+#   script:
+#    - ./script/apps/percona/deprovision/percona-app-deprovision-jiva
 
 ## PROMETHEUS-CSTOR
-prometheus-cstor-deprovision:
-  extends: .app_deprovision_template
-  script:
-   - ./script/apps/prometheus/deprovision/prometheus-app-deprovision-cstor
+# prometheus-cstor-deprovision:
+#   extends: .app_deprovision_template
+#   script:
+#    - ./script/apps/prometheus/deprovision/prometheus-app-deprovision-cstor
 
 ## MONGODB-JIVA
-mongodb-jiva-deprovision:
-  extends: .app_deprovision_template
-  script:
-   - ./script/apps/mongo/deprovision/mongo-app-deprovision-jiva
+# mongodb-jiva-deprovision:
+#   extends: .app_deprovision_template
+#   script:
+#    - ./script/apps/mongo/deprovision/mongo-app-deprovision-jiva
 
 ## POSTGRES-JIVA
-postgres-jiva-deprovision:
-  extends: .app_deprovision_template
-  script:
-   - ./script/apps/postgres/deprovision/postgres-app-deprovision-jiva
+# postgres-jiva-deprovision:
+#   extends: .app_deprovision_template
+#   script:
+#    - ./script/apps/postgres/deprovision/postgres-app-deprovision-jiva
 
 ## JENKINS-JIVA
-jenkins-jiva-deprovision:
-  extends: .app_deprovision_template
-  script:
-   - ./script/apps/jenkins/deprovision/jenkins-app-deprovision-jiva
+# jenkins-jiva-deprovision:
+#   extends: .app_deprovision_template
+#   script:
+#    - ./script/apps/jenkins/deprovision/jenkins-app-deprovision-jiva
 
 ## CASSANDRA-JIVA
-cassandra-jiva-deprovision:
-  extends: .app_deprovision_template
-  script:
-   - ./script/apps/cassandra/deprovision/cassandra-app-deprovision-jiva
+# cassandra-jiva-deprovision:
+#   extends: .app_deprovision_template
+#   script:
+#    - ./script/apps/cassandra/deprovision/cassandra-app-deprovision-jiva
 
 cleanup-aws:
   when: always
